# wasmtime-embed

./: .gitignore  README.md  Setup.hs  cabal.project  wasmtime-artifacts.json  wasmtime-embed.cabal
.github/workflows/: docs.yml  release.yml  test.yml
examples/: wasmtime-embed-examples.cabal
examples/gcd/: Main.hs  gcd.cwasm  gcd.wat
examples/hello/: Main.hs  hello.cwasm
examples/linking/: Main.hs  linking1.wat  linking2.wat
examples/memory/: Main.hs
examples/multi/: Main.hs  multi.wat
examples/serialize/: Main.hs
scripts/: make-sdist.sh  prepare-wasmtime.py
src/: Wasmtime.hs
src/Wasmtime/: Raw.hsc
test/: Main.hs
