cabal-version:      3.8
name:               wasmtime-embed
version:            0.1.0.0
synopsis:           High-level Haskell bindings to the Wasmtime C API
description:        High-level, statically linked Haskell bindings to a pinned Wasmtime C API.
category:           WebAssembly
license:            Unlicense
license-file:       LICENSE
build-type:         Custom
extra-source-files:
    README.md
    scripts/prepare-wasmtime.py
    wasmtime-artifacts.json
    vendor/wasmtime/**/*.json
    vendor/wasmtime/**/LICENSE
    vendor/wasmtime/**/*.h
    vendor/wasmtime/**/*.hh
    vendor/wasmtime/**/*.a

custom-setup
  setup-depends:
      base >=4.18 && <5,
      Cabal >=3.14 && <3.15,
      directory >=1.3 && <1.4,
      filepath >=1.4 && <1.6

common warnings
  ghc-options: -Wall -Wcompat

library
  import: warnings
  exposed-modules:
      Wasmtime
  other-modules:
      Wasmtime.Raw
  hs-source-dirs: src
  build-depends:
      base >=4.18 && <5,
      bytestring >=0.11 && <0.13
  build-tool-depends:
      hsc2hs:hsc2hs
  extra-bundled-libraries: Cwasmtime
  default-language: GHC2021
  if os(osx) && arch(aarch64)
    include-dirs: vendor/wasmtime/aarch64-darwin/include
    hsc2hs-options: --cflag=-Ivendor/wasmtime/aarch64-darwin/include
  else
    if os(linux) && arch(x86_64)
      include-dirs: vendor/wasmtime/x86_64-linux/include
      hsc2hs-options: --cflag=-Ivendor/wasmtime/x86_64-linux/include
    else
      buildable: False
test-suite wasmtime-embed-test
  import: warnings
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  build-depends:
      base >=4.18 && <5,
      bytestring >=0.11 && <0.13,
      wasmtime-embed
  default-language: GHC2021

source-repository head
  type: git
  location: https://github.com/ai-haskell-compiler/wasmtime-embed.git
